--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Git + GitHub</p>
+    <h1>Hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum nobis pariatur fugiat voluptatem labore, obcaecati a nisi voluptatum quo voluptas? Perferendis accusamus quam temporibus maxime excepturi, ut ex voluptatum nulla!</p>
 </body>
 </html>
