--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum nobis pariatur fugiat voluptatem labore, obcaecati a nisi voluptatum quo voluptas? Perferendis accusamus quam temporibus maxime excepturi, ut ex voluptatum nulla!</p>
 // Простой комметарий
+// Второй комментарий
 </body>
 </html>
